# bitcurrency1.2.5

./: Jenkinsfile
src/: CMakeLists.txt  init.cpp  main.cpp  makefile.unix
